@@ -1,7 +1,7 @@
 /*
     IIP Profile Command Handler Class Member Function
 
-    Copyright (C) 2013-2017 Ruven Pillay.
+    Copyright (C) 2013-2019 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -74,9 +74,9 @@ void PFL::run( Session* session, const std::string& argument ){
   }
 
 
-  if( session->loglevel >= 5 ){ 
+  if( session->loglevel >= 5 ){
     (*session->logfile) << "PFL :: Resolution: " << resolution
-			<< ", Position: " << x1 << "," << y1 << " - " 
+			<< ", Position: " << x1 << "," << y1 << " - "
 			<< x2 << "," << y2 << endl;
   }
 
@@ -84,7 +84,7 @@ void PFL::run( Session* session, const std::string& argument ){
   // Make sure we don't request impossible resolutions
   if( resolution<0 || resolution>=(int)(*session->image)->getNumResolutions() ){
     ostringstream error;
-    error << "PFL :: Invalid resolution number: " << resolution; 
+    error << "PFL :: Invalid resolution number: " << resolution;
     throw error.str();
   }
 
@@ -194,17 +194,26 @@ void PFL::run( Session* session, const std::string& argument ){
 
   // Send out our JSON header
 #ifndef DEBUG
-  char str[1024];
-  snprintf( str, 1024,
-	    "Server: iipsrv/%s\r\n"
-	    "Content-Type: application/json\r\n"
-	    "Last-Modified: %s\r\n"
-	    "%s\r\n"
-	    "\r\n",
-	    VERSION, (*session->image)->getTimestamp().c_str(), session->response->getCacheControl().c_str() );
 
-  session->out->printf( (const char*) str );
+  // Get our Access-Control-Allow-Origin value, if any
+  string cors = session->response->getCORS();
+  string eof = "\r\n";
+
+  // Now output the info text
+  stringstream header;
+  header << "Server: iipsrv/" << VERSION << eof
+	 << "X-Powered-By: IIPImage" << eof
+	 << "Content-Type: application/json" << eof
+	 << "Last-Modified: " << (*session->image)->getTimestamp() << eof
+	 << session->response->getCacheControl() << eof;
+
+  // Add CORS header
+  if ( !cors.empty() ) header << cors << eof;
+  header << eof;
+
+  session->out->printf( (const char*) header.str().c_str() );
   session->out->flush();
+
 #endif
 
   // Send the data itself
